--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,21 @@
             "name": "David G. Paul"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/jedi58/inachis.git"
+        }
+    ],
     "require": {
         "php": ">=5.6.1",
         
         "doctrine/dbal": "2.5.*",
         "doctrine/orm": "2.5.*",
         "monolog/monolog": "1.*",
-        "twig/twig": "1.*"
+        "twig/twig": "1.*",
+        
+        "jedi58/inachis": "*"
     },
     "require-dev": {
         "behat/behat": "2.*",
