--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.6
   - 7.0
   - nightly
   
@@ -13,4 +12,4 @@ before_script:
 matrix:
     fast_finish: true
     allow_failures:
-      - php: "7.0"
+      - php: "nightly"
