--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,35 @@
 {
-    "name": "jedi58/inachis-vault",
-    "type": "library",
-    "description": "An extension to the Inachis framework for recording collections",
-    "keywords": ["dev"],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "David G. Paul"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/jedi58/inachis.git"
-        }
-    ],
-    "require": {
-        "php": ">=5.6.1",
-        
-        "doctrine/dbal": "2.5.*",
-        "doctrine/orm": "2.5.*",
-        "monolog/monolog": "1.*",
-        "twig/twig": "1.*",
-        
-        "jedi58/inachis": "@dev"
-    },
-    "require-dev": {
-        "behat/behat": "2.*",
-        "php-console/php-console": "3.*",
-        "phpdocumentor/phpdocumentor": "2.*",
-        "phpunit/phpunit": "4.*",
-        "phpunit/phpunit-skeleton-generator": "*",
-        "squizlabs/php_codesniffer": "2.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Inachis\\": "src/"
-        }
+  "name": "jedi58/inachis-vault",
+  "type": "library",
+  "description": "An extension to the Inachis framework for recording collections",
+  "keywords": ["dev"],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "David G. Paul"
     }
+  ],
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/jedi58/inachis.git"
+    }
+  ],
+  "require": {
+    "doctrine/dbal": "2.5.*",
+    "doctrine/orm": "2.5.*",
+    "monolog/monolog": "1.*",
+    "twig/twig": "1.*"
+  },
+  "require-dev": {
+    "behat/behat": "2.*",
+    "mockery/mockery": "*",
+    "phpdocumentor/phpdocumentor": "2.*",
+    "phpunit/phpunit": "4.*"
+  },
+  "autoload": {
+    "psr-4": {
+      "Inachis\\Component\\": "src/Inachis/"
+    }
+  }
 }
